--- a/index.html
+++ b/index.html
@@ -42,42 +42,55 @@
         })();
     </script>
     <script defer="defer" src="./static/js/main.b2cbd77a.js"></script>
+    <script src="./static/js/multi-state-loader.js"></script>
     <link href="./static/css/main.72ba1fd9.css" rel="stylesheet">
     <script>
-      // Verificar se os dados estão disponíveis e carregá-los diretamente se necessário
-      window.addEventListener('DOMContentLoaded', function() {
-        // Função para verificar se um arquivo existe
-        function checkFileExists(url) {
-          return new Promise(function(resolve) {
-            var xhr = new XMLHttpRequest();
-            xhr.open('HEAD', url, true);
-            xhr.onreadystatechange = function() {
-              if (xhr.readyState === 4) {
-                resolve(xhr.status === 200);
-              }
-            };
-            xhr.send();
-          });
-        }
+        // Verificar se os dados estão disponíveis e carregá-los diretamente se necessário
+        window.addEventListener('DOMContentLoaded', function() {
+            // Função para verificar se um arquivo existe
+            function checkFileExists(url) {
+            return new Promise(function(resolve) {
+                var xhr = new XMLHttpRequest();
+                xhr.open('HEAD', url, true);
+                xhr.onreadystatechange = function() {
+                if (xhr.readyState === 4) {
+                    resolve(xhr.status === 200);
+                }
+                };
+                xhr.send();
+            });
+            }
 
-        // Verificar e carregar dados eleitorais
-        checkFileExists('./data/electoral/2024_prefeito.json').then(function(exists) {
-          if (!exists) {
-            console.warn('Arquivo de dados eleitorais não encontrado no caminho padrão.');
-            // Tentar carregar de um caminho alternativo se necessário
-          }
-        });
+            // Verificar e carregar dados eleitorais
+            checkFileExists('./data/electoral/2024_prefeito.json').then(function(exists) {
+            if (!exists) {
+                console.warn('Arquivo de dados eleitorais não encontrado no caminho padrão.');
+                // Tentar carregar de um caminho alternativo se necessário
+            }
+            });
 
-        // Verificar e carregar dados fiscais para São Paulo como exemplo
-        checkFileExists('./data/fiscal/3550308_2022.json').then(function(exists) {
-          if (!exists) {
-            console.warn('Arquivo de dados fiscais não encontrado no caminho padrão.');
-            // Tentar carregar de um caminho alternativo se necessário
-          }
+            // Verificar e carregar dados fiscais para São Paulo como exemplo
+            checkFileExists('./data/fiscal/3550308_2022.json').then(function(exists) {
+            if (!exists) {
+                console.warn('Arquivo de dados fiscais não encontrado no caminho padrão.');
+                // Tentar carregar de um caminho alternativo se necessário
+            }
+            });
         });
-      });
+    </script>
+    <script>
+        // Inicialização da aplicação multi-estado
+        window.addEventListener('load', function() {
+            setTimeout(function() {
+            // Aguardar app React carregar
+            if (window.initMultiStateLoader) {
+                window.initMultiStateLoader();
+            }
+            }, 2000);
+        });
     </script>
   </head>
+  <script> // MultiStateGeoLoader - Solução Live Server console.log('🚀 Carregando MultiStateGeoLoader para Live Server...'); class MultiStateGeoLoader { constructor() { this.estadosDisponiveis = ['go', 'ac']; this.dadosCarregados = new Map(); this.layerGroups = new Map(); this.cores = { 'go': '#e74c3c', // Vermelho para Goiás 'ac': '#27ae60', // Verde para Acre }; } inicializar(map) { this.map = map; this.estadosDisponiveis.forEach(estado => { const layerGroup = L.layerGroup(); layerGroup.addTo(map); this.layerGroups.set(estado, layerGroup); }); console.log('✅ MultiStateGeoLoader inicializado'); } async carregarEstado(siglaEstado) { try { const arquivo = `./data/geo/brazil-municipalities-${siglaEstado.toLowerCase()}.geojson`; console.log(`🔄 Carregando ${arquivo}...`); const response = await fetch(arquivo); if (!response.ok) { throw new Error(`Erro HTTP: ${response.status}`); } const dadosGeo = await response.json(); if (!dadosGeo.features || !Array.isArray(dadosGeo.features)) { throw new Error('Arquivo GeoJSON inválido'); } this.dadosCarregados.set(siglaEstado, dadosGeo); console.log(`✅ ${siglaEstado.toUpperCase()}: ${dadosGeo.features.length} municípios carregados`); return dadosGeo; } catch (error) { console.error(`❌ Erro ao carregar ${siglaEstado.toUpperCase()}:`, error); throw error; } } async carregarMultiplosEstados(estados = this.estadosDisponiveis) { console.log(`🚀 Carregando estados: ${estados.join(', ').toUpperCase()}`); const resultados = await Promise.allSettled( estados.map(estado => this.carregarEstado(estado)) ); const sucessos = resultados.filter(r => r.status === 'fulfilled').length; console.log(`📊 Carregamento concluído: ${sucessos}/${estados.length} estados`); return sucessos; } renderizarMunicipio(feature, siglaEstado, dadosEleitorais = null) { const props = feature.properties; const codigoMunicipio = props.id || props.codarea; let dadosEleitorais_municipio = null; if (dadosEleitorais) { dadosEleitorais_municipio = dadosEleitorais.find( d => d.codigo_municipio === codigoMunicipio && d.eleito === true ); } let cor = this.cores[siglaEstado] || '#95a5a6'; let fillOpacity = 0.6; if (dadosEleitorais_municipio) { cor = '#f39c12'; fillOpacity = 0.8; } const coordenadas = feature.geometry.coordinates[0]; const polygon = L.polygon(coordenadas, { color: cor, weight: 2, fillColor: cor, fillOpacity: fillOpacity }); const popupContent = this.criarPopup(props, dadosEleitorais_municipio, siglaEstado); polygon.bindPopup(popupContent); const layerGroup = this.layerGroups.get(siglaEstado); if (layerGroup) { layerGroup.addLayer(polygon); } return polygon; } criarPopup(properties, dadosEleitorais, siglaEstado) { const nomeMunicipio = properties.name || properties.nome || 'Nome não disponível'; const codigoMunicipio = properties.id || properties.codarea || 'N/A'; let html = ` <div style="min-width: 250px;"> <h4 style="margin: 0 0 10px 0; color: #2c3e50;">${nomeMunicipio}</h4> <p><strong>Estado:</strong> ${siglaEstado.toUpperCase()}</p> <p><strong>Código:</strong> ${codigoMunicipio}</p> `; if (dadosEleitorais) { html += ` <hr style="margin: 10px 0;"> <p><strong>✅ Prefeito Eleito:</strong></p> <p>${dadosEleitorais.nome_candidato}</p> <p><strong>Partido:</strong> ${dadosEleitorais.partido}</p> `; } else { html += `<p style="color: #7f8c8d;"><em>Dados eleitorais não disponíveis</em></p>`; } html += '</div>'; return html; } async renderizarTodos(dadosEleitorais = null) { console.log('🎨 Renderizando municípios no mapa...'); let totalMunicipios = 0; for (const [siglaEstado, dadosGeo] of this.dadosCarregados) { const layerGroup = this.layerGroups.get(siglaEstado); if (layerGroup) { layerGroup.clearLayers(); } dadosGeo.features.forEach(feature => { this.renderizarMunicipio(feature, siglaEstado, dadosEleitorais); totalMunicipios++; }); console.log(`✅ ${siglaEstado.toUpperCase()}: ${dadosGeo.features.length} municípios renderizados`); } console.log(`🎉 Renderização concluída: ${totalMunicipios} municípios total`); return { totalMunicipios }; } mostrarEstado(siglaEstado, mostrar = true) { const layerGroup = this.layerGroups.get(siglaEstado); if (layerGroup) { if (mostrar) { layerGroup.addTo(this.map); } else { this.map.removeLayer(layerGroup); } } } obterEstatisticas() { const stats = { estadosCarregados: this.dadosCarregados.size, totalMunicipios: 0, porEstado: {} }; for (const [estado, dados] of this.dadosCarregados) { const quantidade = dados.features.length; stats.totalMunicipios += quantidade; stats.porEstado[estado] = quantidade; } return stats; } } // Inicialização automática para Live Server window.addEventListener('load', function() { console.log('🌐 Página carregada, aguardando mapa...'); let tentativas = 0; const maxTentativas = 20; const checkMapa = setInterval(function() { tentativas++; // Procurar pelo container do mapa const mapContainer = document.querySelector('.leaflet-container'); if (mapContainer && window.L) { clearInterval(checkMapa); console.log('✅ Mapa encontrado, inicializando MultiStateGeoLoader...'); // Aguardar um pouco mais para garantir que o mapa está pronto setTimeout(async function() { try { // Encontrar instância do mapa Leaflet let leafletMap = null; // Procurar em todas as possíveis instâncias for (let key in window) { const obj = window[key]; if (obj && obj._container === mapContainer) { leafletMap = obj; break; } } if (!leafletMap) { console.warn('⚠️ Não foi possível encontrar instância do mapa'); return; } // Inicializar loader window.geoLoader = new MultiStateGeoLoader(); window.geoLoader.inicializar(leafletMap); // Carregar estados await window.geoLoader.carregarMultiplosEstados(['go', 'ac']); // Carregar dados eleitorais let dadosEleitorais = []; try { const response = await fetch('./data/electoral/eleicoes_prefeitos_go_2024.json'); dadosEleitorais = await response.json(); console.log(`✅ Dados eleitorais: ${dadosEleitorais.length} registros`); } catch (e) { console.warn('⚠️ Dados eleitorais não encontrados'); } // Renderizar await window.geoLoader.renderizarTodos(dadosEleitorais); // Criar controles criarControles(); console.log('🎉 MultiStateGeoLoader ativo! Use os controles no canto superior esquerdo.'); } catch (error) { console.error('❌ Erro na inicialização:', error); } }, 2000); } else if (tentativas >= maxTentativas) { clearInterval(checkMapa); console.error('❌ Timeout: Mapa não encontrado após 10 segundos'); } }, 500); }); // Criar controles de interface function criarControles() { if (document.getElementById('controles-multi-estado')) return; const controles = document.createElement('div'); controles.id = 'controles-multi-estado'; controles.style.cssText = ` position: fixed; top: 10px; left: 10px; background: white; padding: 15px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.3); z-index: 1000; font-family: Arial, sans-serif; min-width: 200px; `; controles.innerHTML = ` <h4 style="margin: 0 0 10px 0; color: #2c3e50;">🗺️ Multi-Estados</h4> <div id="botoes-estados"></div> <div style="margin-top: 10px; font-size: 12px; color: #7f8c8d;"> <div id="stats">Carregando...</div> </div> `; document.body.appendChild(controles); // Botões para cada estado const botoesDiv = document.getElementById('botoes-estados'); const estados = ['go', 'ac']; estados.forEach(estado => { const button = document.createElement('button'); button.textContent = estado.toUpperCase(); button.style.cssText = ` margin: 3px; padding: 8px 15px; border: none; border-radius: 5px; background: ${window.geoLoader?.cores[estado] || '#ccc'}; color: white; cursor: pointer; font-weight: bold; font-size: 14px; `; button.onclick = function() { if (window.geoLoader) { const ativo = !button.classList.contains('inativo'); window.geoLoader.mostrarEstado(estado, !ativo); button.classList.toggle('inativo'); button.style.opacity = button.classList.contains('inativo') ? '0.5' : '1'; button.style.transform = button.classList.contains('inativo') ? 'scale(0.95)' : 'scale(1)'; } }; botoesDiv.appendChild(button); }); // Atualizar estatísticas if (window.geoLoader) { const stats = window.geoLoader.obterEstatisticas(); document.getElementById('stats').innerHTML = ` Estados: ${stats.estadosCarregados}<br> Municípios: ${stats.totalMunicipios} `; } } console.log('✅ MultiStateGeoLoader carregado e pronto!'); </script>
   <body>
     <noscript>Você precisa habilitar JavaScript para executar este aplicativo.</noscript>
     <div id="root"></div>
